# email-creation

./: .gitignore  .pdm-python  README.md  app.py  prd.md  pyproject.toml  requirements.txt
data/: contacts.json
templates/: welcome_email.html
templates/announcements/: product_launch.html
templates/newsletters/: monthly_newsletter.html
templates/welcome/: welcome_email.html
utils/: __init__.py  agents.py  apollo.py  gemini.py  html_utils.py  orchestrator.py  state.py  ui.py
utils/agents/: __init__.py  base.py  content_generator.py  html_compiler.py  template_selector.py
utils/assistants/: __init__.py  base.py  email_assistant.py  registry.py
utils/core/: __init__.py  config.py  exceptions.py  state.py
utils/orchestration/: __init__.py  orchestrator.py
utils/services/: ai_service.py  apollo.py  html_utils.py  template_service.py
utils/ui/: __init__.py  assistant_ui.py  components.py  page_utils.py
