[project]
name = "email-creation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rishad Bharucha", email = "rb2102@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
