[project]
name = "email-creation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rishad Bharucha", email = "rb2102@gmail.com"},
]
dependencies = [
    "streamlit",
    "python-dotenv",
    "google-genai",
    "requests",
    "beautifulsoup4",
    "jinja2>=3.1.6",
    "lxml",
    "pydantic",
    "typing-extensions",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff",
]
