[project]
name = "email-creation"
version = "0.1.0"
description = "AI-powered email campaign generator using Streamlit and Gemini"
authors = [
    {name = "Rishad Bharucha", email = "rb2102@gmail.com"},
]
dependencies = [
    "streamlit",
    "python-dotenv",
    "google-genai",
    "requests",
    "beautifulsoup4",
    "jinja2>=3.1.6",
    "lxml",
    "pydantic",
    "typing-extensions",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
package-mode = false  # Disable package mode since this is an application

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
